--- a/style.css
+++ b/style.css
@@ -96,12 +96,14 @@ ul {
   grid-column: 1/3;
   font-size: 21px;
   text-align: center;
+  width: 400px;
 }
 .div63 {
   background-color: #f03e3e;
   grid-column: 3/5;
   font-size: 21px;
   text-align: center;
+  width: 400px;
 }
 
 .div64 {
@@ -109,6 +111,7 @@ ul {
   grid-column: 5/7;
   font-size: 21px;
   text-align: center;
+  width: 400px;
 }
 
 .div65 {
@@ -123,7 +126,8 @@ ul {
   grid-row-end: span 2;
   text-decoration: underline;
   color: #fff;
-  font-size: 21px;
+  font-size: 20px;
+  text-align: center;
 }
 
 .div67 {
